--- a/Frontend/task/src/components/RegisterPage/RegisterComponent.module.css
+++ b/Frontend/task/src/components/RegisterPage/RegisterComponent.module.css
@@ -1,35 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body{
-  background-color: #000000;
-}
-
-.login-register-page-image {
-  width: 800px;
-  height: 800px;
-  background-color: whitesmoke;
-}
-
-.login-register-div{
-    margin-left: 150px;
-    margin-top: 100px;
-}
-
-.login-register-div h1{
+.registerComponent h1{
     font-family: "Poppins", sans-serif;
     font-size: 34px;      
     margin-top: 10px;
     color: #ffffff;
 }
 
-.login-register-div  h3 {
+.registerComponent  h3 {
     font-family: "Poppins", sans-serif;
     font-size: 34px;      
     font-weight: 400;
@@ -37,19 +13,19 @@ body{
     color: #ffffff;
 }
 
-.login-register-div p{
+.registerComponent p{
     font-family: "Poppins", sans-serif;
     color: #6d6a6a;
     margin-bottom: 30px;
 }
 
-.login-register-div label{
+.registerComponent label{
     margin-top: 30px;
     color: #ffffff;
     margin-bottom: 5px;
 }
 
-.login-register-div input[type='text']{
+.registerComponent input[type='text'],input[type='email'],input[type='password']{
     /* margin-top: 30px; */
     width: 350px;
     height: 40px;
@@ -64,7 +40,7 @@ body{
     margin-top: 7px;
 }
 
-.login-register-div button{
+.registerComponent button{
     width: 350px;
     height: 40px;
     border-radius: 19px;
