add Add_note component for note creation; update ButtonGroup with icons; improve styles across components

--- a/Frontend/task/src/components/Homapage/ButtonGroup.module.css
+++ b/Frontend/task/src/components/Homapage/ButtonGroup.module.css
@@ -1,11 +1,12 @@
 .buttonGroup button {
-    padding: 10px 20px;
+padding: 10px 20px;
   border: none;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
   margin-left: 5px;
+  margin-top: 20px;
 }
 
 .buttonGroup .nodeAdd_button {
@@ -27,4 +28,9 @@
     background-color: #0056b3;
     transform: scale(1.05);
 
+}
+
+.buttonGroup i{
+    color: aliceblue;
+    font-size: 20px;
 }
