--- a/Frontend/task/src/components/Homapage/NoteCalender.module.css
+++ b/Frontend/task/src/components/Homapage/NoteCalender.module.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  /* margin: 20px; */
   border: 1px solid  #111111;
   border-radius: 8px;
-  padding: 40px;
+  padding: 30px;
   width: 500px;
-  margin-top: 30px;
+  margin-top: 20px;
   background-color: #111111;
+  margin-bottom: 20px;
 }
 
 .calendarHeader {
